--- a/GoodsMS/GoodsMS/GoodsW/GoodsW/GoodsW.csproj
+++ b/GoodsMS/GoodsMS/GoodsW/GoodsW/GoodsW.csproj
@@ -108,6 +108,12 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\GoodsMS.BAL\GoodsMS.BAL.csproj">
+      <Project>{71D603C0-129A-4345-AA7B-BD1DCADF840D}</Project>
+      <Name>GoodsMS.BAL</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
